--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,11 @@
     "e2e": "cd e2e/config && npx codeceptjs run --steps --config ./codecept.conf.js"
   },
   "dependencies": {
+    "ansi-regex": "^6.0.1",
     "axios": "^0.21.4",
     "geolib": "^3.3.1",
     "next": "latest",
+    "pac-resolver": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sass": "^1.42.1",
@@ -46,7 +48,6 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.4",
     "jest-watch-typeahead": "^0.6.1",
-    "pac-resolver": "^5.0.0",
     "playwright": "^1.14.1",
     "pm2": "^5.1.1",
     "prettier": "^2.0.2",
